--- a/index.html
+++ b/index.html
@@ -7,7 +7,48 @@
     <link rel="stylesheet" href="styls.css">
 </head>
 <body>
-    
+    <section id="container">
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>Comida</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p> Qual o principal prato mais tipico da Italia ?</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    <p> Pizza.</p>
+                </div>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3> Capital</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p> Qual a capital da Italia?</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    <p> Romma.</p>
+                </div>
+            </div>
+        </article>
+
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3> População</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p> Quantos habitantes tem na Italia?</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    <p> 60 milhões.</p>
+                </div>
+            </div>
+        </article>
+
+       </section>
+ 
+    <footer>
+        <p>Projeto feito por .........</p>
+    </footer>
     
 </body>
 </html>
