--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        </section>
  
     <footer>
-        <p>Projeto feito por .........</p>
+        <p>Projeto feito por Anny e Laura.</p>
     </footer>
     
 </body>
